# cocotola-1.24

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  README.md  Taskfile.yml  app.db  deps.bzl  go.mod  go.work  go.work.sum  pkgforbid.yml
.github/: gitleaks.toml  pkgforbid.yml
cocotola-app/: BUILD.bazel  go.mod  go.sum  main.go
cocotola-app/config/: BUILD.bazel  config.go  config.yml
cocotola-app/web_dist/: BUILD.bazel  flutter.go  react.go  web.go
cocotola-app/web_dist/flutter/: flutter_bootstrap.js  flutter_service_worker.js  main.dart.js  main.dart.js.map
cocotola-app/web_dist/react/: index.html
cocotola-app/web_dist/react/assets/: index-C6nttmmi.js
cocotola-auth/: .mockery.yml  BUILD.bazel  (+3 more)
cocotola-auth/controller/gin/: BUILD.bazel  app_router.go  auth_handler.go  auth_handler_s_test.go  google_auth_handler.go  google_auth_handler_s_test.go  helper_test.go  password_auth_handler.go  rbac_handler.go  user_handler.go
cocotola-auth/controller/gin/helper/: BUILD.bazel  auth_helper.go
cocotola-auth/controller/gin/middleware/: BUILD.bazel  auth_middleware.go  init.go
cocotola-auth/controller/gin/mocks/: BUILD.bazel  mocks.go
cocotola-auth/gateway/: BUILD.bazel  auth_token_manager.go  auth_token_manager_s_test.go  cocotola_core_callback_client.go  export_test.go  firebase_client.go  google_auth_client.go  google_auth_client_s_test.go  helper_test.go  init.go  repository_factory.go  state_repository.go
cocotola-auth/gateway/mocks/: BUILD.bazel  mocks.go
cocotola-auth/initialize/: BUILD.bazel  initialize.go
cocotola-auth/service/: BUILD.bazel  app_user_repository.go  auth_token_manager.go  authentication.go  authorization.go  cocotola_core_callback_client.go  firebase_client.go  organization_action.go  organization_action.go.txt  repository_factory.go  state_repository.go  system_admin_action.go  system_owner_action.go
cocotola-auth/service/mocks/: BUILD.bazel  mocks.go
cocotola-auth/usecase/: BUILD.bazel  authentication_usecase.go  google_user_usecase.go  init.go  organization_action.go  password_usecase.go  rbac_usecase.go  user_registration.go  user_usecase.go
cocotola-core/: .mockery.yaml  BUILD.bazel  go.mod  go.sum  main.go
cocotola-core/config/: BUILD.bazel  config.go  config.yml
cocotola-core/controller/gin/: BUILD.bazel  app_router.go  baggage.go  callback_handler.go  deck_handler.go  helper_test.go  profile_handler.go  workbook_handler.go  workbook_handler.go.txt  workbook_handler_s_test.go  workbook_handler_s_test.go.txt
cocotola-core/controller/gin/helper/: BUILD.bazel  auth_helper.go  path_helper.go  query_helper.go
cocotola-core/controller/gin/middleware/: BUILD.bazel  auth_middleware.go  init.go
cocotola-core/controller/gin/mocks/: BUILD.bazel  WorkbookCommandUsecase.go  WorkbookQueryUsecase.go
cocotola-core/domain/: BUILD.bazel  deck.go  deck_model.go  init.go  profile.go  space.go  template.go  workbook.go
cocotola-core/gateway/: BUILD.bazel  cocotola_auth_client.go  cocotola_rbac_client.go  deck_repository.go  firebase_client.go  firebase_client_test.go  init.go  pair_of_user_and_space_repository.go  repository_factory.go  space_repository.go  transaction_manager.go  workbook_repository.go
cocotola-core/gateway/resource_manager/: BUILD.bazel  deck_query_usecase.go
cocotola-core/gateway/usecase/student/: BUILD.bazel  workbook_query_service.go
cocotola-core/initialize/: BUILD.bazel  initialize.go
cocotola-core/service/: BUILD.bazel  cocotola_auth_client.go  cocotola_rbac_client.go  cocotola_rbac_clienty.go  deck.go  deck_repository.go  pair_of_user_and_space_repository.go  repository_factory.go  service.go  service_s_test.go  space.go  space_repository.go  workbook_repository.go
cocotola-core/service/mocks/: BUILD.bazel  CocotolaAuthClient.go
cocotola-core/sqls/: BUILD.bazel  sqls.go
cocotola-core/sqls/mysql/: 2020010102_create_space.up.sql
cocotola-core/sqls/postgres/: 2021010101_create_workbook.up.sql
cocotola-core/sqls/sqlite3/: 2021010101_create_folder.up.sql  2021010101_create_space.up.sql  2021010102_create_folder.up.sql  2021010103_create_deck.up.sql  2021010103_create_template.up.sql  2021010104_create_deck.up.sql  2021010105_create_user_n_space.up.sql
cocotola-core/usecase/: BUILD.bazel  callback_usecase.go  init.go  profile_usecase.go
cocotola-core/usecase/callback/: BUILD.bazel  callback_usecase.go
cocotola-core/usecase/resource_manager/: BUILD.bazel  deck_command_usecase.go  deck_query_usecase.go
cocotola-core/usecase/student/: BUILD.bazel  workbook_command_usecase.go.txt  workbook_query_usecase.go.txt
cocotola-empty/: BUILD.bazel  go.mod  go.sum  main.go
cocotola-test/: .gitignore  BUILD.bazel  go.mod  go.sum  main.go
cocotola-test/scenario/: BUILD.bazel  scenario_test.go  schenario.go
lib/controller/: BUILD.bazel  baggage.go  server.go
lib/controller/gin/: BUILD.bazel  router.go
lib/controller/gin/helper/: BUILD.bazel  path_helper.go  query_helper.go
lib/controller/gin/middleware/: BUILD.bazel  init.go  tracelog_middleware.go  wait_middleware.go
lib/domain/: BUILD.bazel  errors.go  init.go  lang.go  lang_s_test.go  strings.go  system_token.go
lib/gateway/: BUILD.bazel  cocotola_auth_client.go  cocotola_rbac_client.go  init.go  multiprocess.go
moonbeam/sqls/: BUILD.bazel  drop.sql  sqls.go
moonbeam/sqls/mysql/: 2020010102_create_app_user.up.sql  2020010103_create_user_group.up.sql  2020010107_create_group_n_group.up.sql  2020010110_create_user_group_details.up.sql  2020010202_insert_app_user.up.sql
moonbeam/sqls/postgres/: 2020010101_create_organization.up.sql  2020010102_create_app_user.up.sql  2020010103_create_user_group.up.sql  2020010106_create_user_n_group.up.sql  2020010107_create_group_n_group.up.sql  2020010110_create_user_group_details.up.sql  2020010201_insert_organization.up.sql  2020010202_insert_app_user.up.sql
moonbeam/sqls/sqlite3/: 2020010101_create_organization.up.sql  2020010102_create_app_user.up.sql  2020010103_create_user_group.up.sql  2020010106_create_user_n_group.up.sql  2020010110_create_user_group_details.up.sql
(+138 files in other folders)
