load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cocotola-core_lib",
    srcs = ["main.go"],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-core/config",
        "//cocotola-core/domain",
        "//cocotola-core/initialize",
        "//cocotola-core/service",
        "//cocotola-core/sqls",
        "//lib/controller/gin",
        "//lib/domain",
        "//lib/gateway",
        "//moonbeam/lib/config",
        "//moonbeam/lib/errors",
        "//moonbeam/lib/log",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
    ],
)

go_binary(
    name = "cocotola-core",
    embed = [":cocotola-core_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "pkg",
    srcs = [":cocotola-core"],
)

oci_image(
    name = "image",
    base = "@distroless_static_debian12_linux_amd64",
    entrypoint = ["/cocotola-core"],
    tars = [":pkg"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cocotola-core:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "us-west1-docker.pkg.dev/mocoarow-25-08/cocotola-core/cocotola-core",
)
