load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embedsrcs = [
        "local.yml",
        "production.yml",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-app/config",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-core/config",
        "//lib/config",
        "//moonbeam/lib/config",
        "//moonbeam/lib/domain",
        "//moonbeam/lib/errors",
        "@in_yaml_go_yaml_v4//:yaml",
    ],
)
