load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "web_dist",
    srcs = [
        "flutter.go",
        "react.go",
        "web.go",
    ],
    embedsrcs = [
        "react/assets/index-C6nttmmi.js",
        "react/assets/index-n_ryQ3BS.css",
        "react/assets/react-CHdo91hT.svg",
        "react/index.html",
        "react/vite.svg",
        "flutter/index.html",
        "flutter/.last_build_id",
        "flutter/assets/AssetManifest.bin",
        "flutter/assets/AssetManifest.bin.json",
        "flutter/assets/AssetManifest.json",
        "flutter/assets/FontManifest.json",
        "flutter/assets/NOTICES",
        "flutter/assets/fonts/MaterialIcons-Regular.otf",
        "flutter/assets/packages/cupertino_icons/assets/CupertinoIcons.ttf",
        "flutter/assets/shaders/ink_sparkle.frag",
        "flutter/canvaskit/canvaskit.js",
        "flutter/canvaskit/canvaskit.js.symbols",
        "flutter/canvaskit/canvaskit.wasm",
        "flutter/canvaskit/chromium/canvaskit.js",
        "flutter/canvaskit/chromium/canvaskit.js.symbols",
        "flutter/canvaskit/chromium/canvaskit.wasm",
        "flutter/canvaskit/skwasm.js",
        "flutter/canvaskit/skwasm.js.symbols",
        "flutter/canvaskit/skwasm.wasm",
        "flutter/canvaskit/skwasm.worker.js",
        "flutter/favicon.png",
        "flutter/flutter.js",
        "flutter/flutter_bootstrap.js",
        "flutter/flutter_service_worker.js",
        "flutter/icons/Icon-192.png",
        "flutter/icons/Icon-512.png",
        "flutter/icons/Icon-maskable-192.png",
        "flutter/icons/Icon-maskable-512.png",
        "flutter/main.dart.js",
        "flutter/main.dart.js.map",
        "flutter/manifest.json",
        "flutter/version.json",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-app/web_dist",
    visibility = ["//visibility:public"],
)
