load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "initialize",
    srcs = ["initialize.go"],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-auth/initialize",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-auth/controller/gin",
        "//cocotola-auth/domain",
        "//cocotola-auth/gateway",
        "//cocotola-auth/service",
        "//lib/controller/gin",
        "//moonbeam/lib/config",
        "//moonbeam/lib/errors",
        "//moonbeam/lib/gateway",
        "//moonbeam/lib/log",
        "//moonbeam/user/service",
        "@com_github_gin_gonic_gin//:gin",
        "@io_gorm_gorm//:gorm",
    ],
)
