load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "app_user_repository.go",
        "auth_token_manager.go",
        "authentication.go",
        "authorization.go",
        "firebase_client.go",
        "organization_action.go",
        "repository_factory.go",
        "state_repository.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-auth/service",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//lib/domain",
        "//moonbeam/lib/errors",
        "//moonbeam/lib/service",
        "//moonbeam/user/domain",
        "//moonbeam/user/service",
    ],
)
