load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "auth_token_manager.go",
        "authentication.go",
        "authorization.go",
        "cocotola_core_callback_client.go",
        "firebase_client.go",
        "repository_factory.go",
        "state_repository.go",
        "system_admin_action.go",
        "system_owner_action.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-auth/service",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/domain",
        "//lib/domain",
        "//moonbeam/lib/errors",
        "//moonbeam/lib/service",
        "//moonbeam/user/domain",
        "//moonbeam/user/service",
    ],
)
