load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embedsrcs = [
        "config.yml",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/config",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config",
        "//moonbeam/lib/config",
        "//moonbeam/lib/domain",
        "//moonbeam/lib/errors",
        "@in_yaml_go_yaml_v4//:yaml",
    ],
)
