load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "deck.go",
        "init.go",
        "profile.go",
        "space.go",
        "template.go",
        "workbook.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//moonbeam/lib/domain",
        "//moonbeam/lib/errors",
        "//moonbeam/user/domain",
    ],
)
