load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "cocotola_auth_client.go",
        "firebase_client.go",
        "init.go",
        "repository_factory.go",
        "transaction_manager.go",
        "workbook_repository.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/domain",
        "//cocotola-core/service",
        "//lib/api",
        "//moonbeam/lib/domain",
        "//moonbeam/lib/errors",
        "//moonbeam/lib/gateway",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_test(
    name = "gateway_test",
    srcs = ["firebase_client_test.go"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_google_firebase_go_v4//:go",
    ],
)
