load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "deck_repository.go",
        "firebase_client.go",
        "init.go",
        "pair_of_user_and_space_repository.go",
        "repository_factory.go",
        "space_repository.go",
        "transaction_manager.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/domain",
        "//cocotola-core/service",
        "//moonbeam/lib/domain",
        "//moonbeam/lib/errors",
        "//moonbeam/lib/gateway",
        "//moonbeam/user/domain",
        "//moonbeam/user/gateway",
        "//moonbeam/user/service",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_test(
    name = "gateway_test",
    srcs = ["firebase_client_test.go"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_google_firebase_go_v4//:go",
    ],
)
