load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "callback_usecase.go",
        "init.go",
        "profile_usecase.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/domain",
        "//cocotola-core/service",
        "//lib/api",
        "//moonbeam/lib/errors",
        "//moonbeam/lib/log",
        "//moonbeam/lib/service",
        "//moonbeam/user/domain",
        "//moonbeam/user/service",
    ],
)
