load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = ["multiprocess.go"],
    importpath = "github.com/mocoarow/cocotola-1.24/lib/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/controller",
        "//moonbeam/lib/gateway",
        "@org_golang_x_sync//errgroup",
    ],
)
