load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqls",
    srcs = ["sqls.go"],
    embedsrcs = [
        "mysql/2020010101_create_organization.up.sql",
        "mysql/2020010102_create_app_user.up.sql",
        "mysql/2020010103_create_user_group.up.sql",
        "mysql/2020010106_create_user_n_group.up.sql",
        "mysql/2020010107_create_group_n_group.up.sql",
        "mysql/2020010110_create_user_group_details.up.sql",
        "mysql/2020010201_insert_organization.up.sql",
        "mysql/2020010202_insert_app_user.up.sql",
        "postgres/2020010101_create_organization.up.sql",
        "postgres/2020010102_create_app_user.up.sql",
        "postgres/2020010103_create_user_group.up.sql",
        "postgres/2020010106_create_user_n_group.up.sql",
        "postgres/2020010107_create_group_n_group.up.sql",
        "postgres/2020010110_create_user_group_details.up.sql",
        "postgres/2020010201_insert_organization.up.sql",
        "postgres/2020010202_insert_app_user.up.sql",
        "sqlite3/2020010101_create_organization.up.sql",
        "sqlite3/2020010102_create_app_user.up.sql",
        "sqlite3/2020010103_create_user_group.up.sql",
        "sqlite3/2020010106_create_user_n_group.up.sql",
        "sqlite3/2020010107_create_group_n_group.up.sql",
        "sqlite3/2020010110_create_user_group_details.up.sql",
        "sqlite3/2020010201_insert_organization.up.sql",
        "sqlite3/2020010202_insert_app_user.up.sql",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/moonbeam/sqls",
    visibility = ["//visibility:public"],
)
