load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gin",
    srcs = [
        "app_router.go",
        "auth_handler.go",
        "google_auth_handler.go",
        "password_auth_handler.go",
        "rbac_handler.go",
        "user_handler.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-auth/controller/gin",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-auth/config",
        "//cocotola-auth/controller/gin/helper",
        "//cocotola-auth/controller/gin/middleware",
        "//cocotola-auth/domain",
        "//cocotola-auth/gateway",
        "//cocotola-auth/service",
        "//cocotola-auth/usecase",
        "//lib/api",
        "//lib/controller/gin",
        "//lib/domain",
        "//moonbeam/lib/domain",
        "//moonbeam/lib/log",
        "//moonbeam/user/domain",
        "//moonbeam/user/service",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
    ],
)

go_test(
    name = "gin_test",
    srcs = [
        "auth_handler_s_test.go",
        "google_auth_handler_s_test.go",
        "helper_test.go",
    ],
    deps = [
        ":gin",
        "//cocotola-auth/config",
        "//cocotola-auth/controller/gin/mocks",
        "//cocotola-auth/domain",
        "//lib/config",
        "//lib/controller/gin",
        "//moonbeam/lib/config",
        "//moonbeam/user/domain",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_ohler55_ojg//jp",
        "@com_github_ohler55_ojg//oj",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
