load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = ["CocotolaAuthClient.go"],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/service/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/api",
        "@com_github_stretchr_testify//mock",
    ],
)
