load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "callback",
    srcs = ["callback_usecase.go"],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/usecase/callback",
    visibility = ["//visibility:public"],
    deps = [
        "//moonbeam/lib/log",
        "//moonbeam/user/domain",
    ],
)
