load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "resource_manager",
    srcs = ["deck_command_usecase.go"],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/usecase/resource_manager",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/domain",
        "//cocotola-core/service",
        "//lib/api",
        "//moonbeam/lib/service",
        "//moonbeam/user/domain",
        "//moonbeam/user/service",
    ],
)
