load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "student",
    srcs = [
        "workbook_command_usecase.go",
        "workbook_query_usecase.go",
    ],
    importpath = "github.com/mocoarow/cocotola-1.24/cocotola-core/usecase/student",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/domain",
        "//cocotola-core/service",
        "//lib/api",
        "//moonbeam/lib/service",
    ],
)
